@@ -1,1 +1,0 @@
-Total validation errors: 0
